JAXB modules are using to be deleted Java APIs
https://github.com/eclipse-ee4j/jaxb-ri/issues/1461
https://j2eeguys.com/updater/index.html
Fixes by Automated Code Updater

Signed-off-by: Sanddust <sanddust@j2eeguys.com>